appId: com.reactnativelegalbareexample
name: '[Android] Check additional project root entry in OSS libraries list'
tags:
  - pull-request
  - android
---
- launchApp:
    clearState: true
    stopApp: true
- startRecording: 'e2e_results/checkLicenses-additionalProjectRoot'
- tapOn: 'Tap to see list of OSS libraries'
- assertVisible: 'OSS Notice'
- swipe:
    start: 50%, 90%
    end: 50%, 0%
- scrollUntilVisible:
    element:
      containsChild: 'is-even'
      index: 0
    direction: 'DOWN'
    timeout: 180000
    centerElement: false
    speed: 75
    visibilityPercentage: 100
- takeScreenshot: 'e2e_results/additionalProjectRoot-is-even_list_element'
- tapOn: 'is-even'
- takeScreenshot: 'e2e_results/additionalProjectRoot-license_modal'
- assertVisible: '.*MIT License.*'
- assertVisible: '.*Copyright \(c\) 2015, 2017, Jon Schlinkert.*'
- back
- back
- stopRecording
- killApp
