appId: com.reactnativelegalbareexample
name: '[Android] Check React Native entry in OSS libraries list'
tags:
  - pull-request
  - android
---
- launchApp:
    clearState: true
    stopApp: true
- startRecording: 'e2e_results/checkLicenses'
- tapOn: 'Tap to see list of OSS libraries'
- assertVisible: 'OSS Notice'
- swipe:
    start: 50%, 90%
    end: 50%, 0%
- scrollUntilVisible:
    element:
      containsChild: '@react-native/virtualized-lists'
      index: 0
    direction: 'DOWN'
    timeout: 75000
    centerElement: false
    speed: 75
    visibilityPercentage: 75
- takeScreenshot: 'e2e_results/react-native_list_element'
- assertVisible:
    text: '\d+\.\d+\.\d+'
    index: 0
- assertVisible:
    text: 'MIT License'
    index: 0
- tapOn:
    text: 'MIT License'
    index: 0
- takeScreenshot: 'e2e_results/license_modal'
- assertVisible: '.*MIT License.*'
- assertVisible: '.*Copyright \(c\).*'
- assertVisible: '.*Permission is hereby granted, free of charge.*'
- back
- back
- stopRecording
- killApp
